[package]
name = "alloy-dyn-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-dyn-abi = "0.6.4"
alloy-json-abi = { version = "0.6.4", features = ["serde_json"] }
alloy-primitives = "0.6.4"
base64 = "0.22.0"
ethers = "2.0.13"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
