[package]
name = "alloy-dyn-parser"
version = "0.1.1"
edition = "2021"
description = "Dynamically parse events using JSON-ABI."
license = "MIT"

[dependencies]
alloy-dyn-abi = { version = "0.6.4", features = ["eip712"] }
alloy-json-abi = { version = "0.6.4", features = ["serde_json"] }
alloy-primitives = "0.6.4"
base64 = "0.22.0"
ethers = "2.0.13"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.57"
